broken UI fixing (#449)

--- a/src/user/organization/organization.scss
+++ b/src/user/organization/organization.scss
@@ -9,6 +9,7 @@
   }
   .news {
     flex: 3;
+    margin-left: 200px;
     .notify-user {
       display: flex;
       padding: 20px 0px 20px 30px;
